OOPIF: Clear focused frame before advancing to remote frame.

There's a race where we could receive a new click event before receving
notification of a remote frame becoming focused as a result of advancing
(using the tab key for example) to that frame.

If we already think we're focused we would never reply back to the
browser to refocus this frame.

BUG=713977
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2844563002
Cr-Commit-Position: refs/heads/master@{#467580}

Former-commit-id: c23fcf744de8b51e5936649cfe985cfa9c058398